# koulouri_c

./: .clangd  .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md
include/koulouri/curses_gui/: cursesmainwindow.h
include/koulouri/qt_gui/: qtmainwindow.h  songitemwidget.h
koulouri_shared/: CMakeLists.txt  alsasilencer.cpp  alsasilencer.h  cmdparser.cpp  cmdparser.h
libkoulouri/: CMakeLists.txt  FormatTools.cpp  FormatTools.h  README.md  logger.cpp  logger.h  metahandler.cpp  metahandler.h  player.cpp  player.h
src/curses_gui/: cursesmainwindow.cpp  main.cpp
src/koulouri_cli/: main.cpp
src/qt_gui/: main.cpp  qtmainwindow.cpp  qtmainwindow.ui  songitemwidget.cpp  songitemwidget.ui
